--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/socialite": "^4.4",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "realrashid/sweet-alert": "^3.1",
+        "yoeunes/notify": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
